--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
+os: linux
+arch:
+ - amd64
+ - ppc64le
+ 
 language: java
 
 # Specify which branches/tags that we do not want to be built: r5.0.0-M5
